# schematype

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.d.ts  index.js  openapi_example.json  package.json  pnpm-lock.yaml  renovate.json  tsconfig.json
.github/workflows/: build_and_publish.yml
node/: README.md  debug.ts
node/playground/: openapi-to-types.ts  schema-to-type.ts
node/tests/: openapi_to_types.test.mjs  schema_to_type.test.mjs  schema_to_typescript.test.mjs
node/tests/snapshots/: openapi_to_types.test.mjs.md  openapi_to_types.test.mjs.snap  schema_to_type.test.mjs.md  schema_to_type.test.mjs.snap  schema_to_typescript.test.mjs.md  schema_to_typescript.test.mjs.snap
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/npm/win32-arm64-msvc/: README.md
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: json_schema_to_typescript.rs  lib.rs  main.rs  open_api_to_typescript.rs  parse_schema.rs
