[package]
name = "napi-schematype"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
openapiv3 = "=2.2.0"
napi-derive = "3.0.0"
napi = "3.0.0"

[build-dependencies]
napi-build = "2.2.4"

[lib]
crate-type = [ "cdylib" ]

[profile.release]
lto = true
strip = "symbols"
